# quizzler

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: bulletin-deploy.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tools.json  vite.config.ts
app/e2e/: boot.spec.ts  contracts.ts  fixtures.ts  game.spec.ts  invite.spec.ts  lifecycle.spec.ts  pack-signals.spec.ts  pack.spec.ts  rejoin.spec.ts  scripted-player.ts
app/scripts/: catalog-fingerprint.ts  deploy.ts  dev-host.ts  promote-registry-migration.ts  scaffold-editorial.ts  seed-packs.ts  starter-packs.ts  validate-editorial.ts  validate-packs.ts  verify-deployment.ts
app/src/: abi-game.json  abi-pack-signals.json  abi-registry.json  abi-session-registry.json  abi.json  abi.test.ts  answer-submission.test.ts  answer-submission.ts  chain-read-retry.test.ts  chain-read-retry.ts  contract-address.json  deployment-events.test.ts  deployment-events.ts  deployment-history.test.ts  deployment-history.ts  deployments.test.ts  deployments.ts  editorial-validation.test.ts  editorial-validation.ts  game-config.test.ts  game-config.ts  game-session.test.ts  game-session.ts  game-settings.test.ts  game-settings.ts  input.test.ts  input.ts  instant-play-preference.test.ts  instant-play-preference.ts  invite.test.ts  invite.ts  known-games.test.ts  known-games.ts  live-snapshot-content.test.ts  live-snapshot-content.ts  main.ts  normalize.test.ts  normalize.ts  pack-capabilities.test.ts  pack-capabilities.ts  (+16 more)
contracts/logic/: Cargo.toml
contracts/pack-signals/: Cargo.toml
contracts/pack-signals/src/: pack_signals.rs
contracts/quizzler/: Cargo.toml
contracts/quizzler/src/: quizzler.rs
shared/: answer-test-vectors.json  starter-pack-metadata.json
(+29 files in other folders)
