[package]
name = "quizzler"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[[bin]]
name = "quizzler"
path = "src/quizzler.rs"

[dependencies]
alloy-core = { version = "0.8", default-features = false, features = ["sol-types"] }
pallet-revive-uapi = { version = "0.10", default-features = false }
picoalloc = { version = "5", default-features = false }
polkavm-derive = { version = "0.31.0" }
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "charles/cdm-integration" }
quizzler-logic = { path = "../logic", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
overflow-checks = false